# grpc-cmake-example

./: CMakeLists.txt  LICENSE  README.md  greeter_server.cc
cmake/: FindGRPC.cmake
